================
Waffle Changelog
================

v0.19.0
=======
- Made tests for jinja2 optional while waiting for django-jinja to be compatible with django 3.0.
- Add support for Django 3.0 by removing use of deprecated functionality from Django 2.2.

v0.18.0
=======
- Updated `MIDDLEWARE` setting name for Django 1.10+
- Improved cache performance for `is_active_for_user`
- Corrected log formatting
- Added log entries for admin quick link actions
- Added permissions for admin actions

v0.17.0
=======
- Fixed documentation issues
- Added class-based view mixins

v0.16.0
=======
- Added support for Django 2.1 and 2.2
- Flushing cache after modifying flags' groups and users
- Removed redundant log line
- Corrected version in `waffle/__init__.py`
- Fixed bug in tests
- Using strings as cache keys instead of bytes
- Passing effects of test decorator to child classes
-- NOTE: This introduced a backwards-incompatible change for the testutils override decorators.
   See https://github.com/django-waffle/django-waffle/pull/331 for details.

v0.15.1
=======
- Optionally logging missing flags, samples, and switches
- Added --users option to waffle_flag management command
- Updated testutils to flush caches
- Improved admin site for users and groups
- Fixed global cache thread safety issues

v0.15.0
=======
- Dropped support for Django < 1.11
- Dropped support for Python 3.3
- Added settings `WAFFLE_CREATE_MISSING_(FLAG|SWITCHES|SAMPLES)` to optionally 
  create missing objects in the database automatically
- Allow serializing/de-serializing waffle models by natural key
- Added pluggable Flag model

v0.14.0
=======
- Added i18n support
- Added Russian translations
- Add management command to delete waffle data

v0.13
=====
- Added support for Django 2.0.
- Added support for search the name and notes fields in Django admin.
- Fixed small bugs in management commands.
- Fixed small documentation issues.
- Updated `waffle_flag` management command to accept user groups.