@@ -8,20 +8,12 @@ matrix:
   include:
       - { python: "2.7", env: TOXENV=py27-django111-jinja }
 
-      - { python: "3.4", env: TOXENV=py34-django111-jinja }
-      - { python: "3.4", env: TOXENV=py34-django20-jinja }
-
       - { python: "3.5", env: TOXENV=py35-django111-jinja }
-      - { python: "3.5", env: TOXENV=py35-django20-jinja }
 
       - { python: "3.6", env: TOXENV=py36-django111-jinja }
-      - { python: "3.6", env: TOXENV=py36-django20-jinja }
-      - { python: "3.6", env: TOXENV=py36-django21-jinja }
       - { python: "3.6", env: TOXENV=py36-django22-jinja }
       - { python: "3.6", env: TOXENV=py36-django30 }
 
-      - { python: "3.7", env: TOXENV=py37-django20-jinja }
-      - { python: "3.7", env: TOXENV=py37-django21-jinja }
       - { python: "3.7", env: TOXENV=py37-django22-jinja }
       - { python: "3.7", env: TOXENV=py37-django30 }
 
